# ViSOR

./: .gitignore  README.md  RUN_TRAINING_WATCH_VIEW.txt  _launch_common.sh  environment.yml  pyproject.toml  requirements.txt  run_train.sh  setup.sh  view_latest.sh  watch_train.sh
Blender/: command.txt  random.py  synth.blend
renders/: 00000.npy  00001.npy  00002.npy  00003.npy  00004.npy  00005.npy  00006.npy  00007.npy  00008.npy  00009.npy  00010.npy  00011.npy  00012.npy  00013.npy  00014.npy  00015.npy  views.jsonl
visor/: __init__.py  analyze_three_ray.py  gaussian_slab.py  hashgrid.py  plane_geometry.py  train.py  viewer.py  watch_training_progress.py
visor/utils/: __init__.py  convoror_sh_topk.py  gen_midas_depth.py
